Netty warning fix