@@ -1,4 +1,5 @@
 FROM openjdk:25-jdk-slim
+ENV JAVA_TOOL_OPTIONS="--enable-native-access=ALL-UNNAMED"
 RUN mkdir /data
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
